--- a/WebcamBarcodeScanner/pom.xml
+++ b/WebcamBarcodeScanner/pom.xml
@@ -61,6 +61,14 @@
     </build>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.14.3</version>
+        </dependency>
+
+
         <dependency>
             <groupId>com.github.sarxos</groupId>
             <artifactId>webcam-capture</artifactId>
